scripts for sentences from NLI datasets and captions

--- a/.gitignore
+++ b/.gitignore
@@ -107,16 +107,20 @@ venv.bak/
 data/adjectives
 data/annotated
 data/brysbaert
+data/candidates/*.json
+data/coco
 data/conceptnet
 data/excel
 data/gutenberg
 data/gutentag
 data/joci
+data/multinli_0.9
 data/nell
 data/ngrams
 data/nouns
 data/pwkb
 data/rocstories
+data/snli_1.0
 data/subtlexus
 data/visualgenome
 data/wikidata
