--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/DIIN"]
 	path = lib/DIIN
-	url = https://github.com/jamesmullenbach/DIIN
+	url = https://jamesmullenbach@github.com/jamesmullenbach/DIIN
